[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://UI/main_menu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="RootMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="RootMenu"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 728.0

[node name="MarginContainer" type="MarginContainer" parent="RootMenu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="RootMenu/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 924.0
margin_bottom = 668.0
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="RootMenu/Panel/MarginContainer/VBoxContainer"]
margin_right = 904.0
margin_bottom = 264.0
custom_constants/margin_top = 100
custom_constants/margin_bottom = 100

[node name="CenterContainer" type="CenterContainer" parent="RootMenu/Panel/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 100.0
margin_right = 904.0
margin_bottom = 164.0

[node name="LogoRect" type="TextureRect" parent="RootMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/CenterContainer"]
margin_left = 420.0
margin_right = 484.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="PlayButton" type="Button" parent="RootMenu/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 284.0
margin_right = 904.0
margin_bottom = 304.0
text = "Play"

[node name="CreditsButton" type="Button" parent="RootMenu/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 324.0
margin_right = 904.0
margin_bottom = 344.0
text = "Credits"

[node name="StatsButton" type="Button" parent="RootMenu/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 364.0
margin_right = 904.0
margin_bottom = 384.0
text = "Stats"

[node name="OptionsButton" type="Button" parent="RootMenu/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 404.0
margin_right = 904.0
margin_bottom = 424.0
text = "Options"

[node name="CreditsMenu" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="CreditsMenu"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 728.0

[node name="MarginContainer" type="MarginContainer" parent="CreditsMenu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsMenu/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 924.0
margin_bottom = 668.0
custom_constants/separation = 20

[node name="CreditsTitle" type="Label" parent="CreditsMenu/Panel/MarginContainer/VBoxContainer"]
margin_right = 904.0
margin_bottom = 14.0
text = "Credits"

[node name="CenterContainer" type="CenterContainer" parent="CreditsMenu/Panel/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 904.0
margin_bottom = 608.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreditsContents" type="Label" parent="CreditsMenu/Panel/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 397.0
margin_top = 254.0
margin_right = 507.0
margin_bottom = 319.0
text = "Owen Levin
Parker Nalchajian
Rick Burke
Ray Ockenfels"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CreditsMenu/Panel/MarginContainer/VBoxContainer"]
margin_top = 628.0
margin_right = 904.0
margin_bottom = 648.0

[node name="CreditsBackButton" type="Button" parent="CreditsMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 64.0
margin_bottom = 20.0
text = "<-- Back"

[node name="StatsMenu" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="StatsMenu"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 728.0

[node name="MarginContainer" type="MarginContainer" parent="StatsMenu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="StatsMenu/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 924.0
margin_bottom = 668.0
custom_constants/separation = 20

[node name="StatsTitle" type="Label" parent="StatsMenu/Panel/MarginContainer/VBoxContainer"]
margin_right = 904.0
margin_bottom = 14.0
text = "Statistics"

[node name="MarginContainer" type="MarginContainer" parent="StatsMenu/Panel/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 904.0
margin_bottom = 608.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="StatsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 854.0
margin_bottom = 524.0
custom_constants/vseparation = 20
custom_constants/hseparation = 200
columns = 2

[node name="DeathCountLabel" type="Label" parent="StatsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_right = 117.0
margin_bottom = 14.0
text = "Number of Deaths"

[node name="DeathCountValue" type="Label" parent="StatsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 317.0
margin_right = 325.0
margin_bottom = 14.0
text = "0"

[node name="EnemyDefeatedCountLabel" type="Label" parent="StatsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 34.0
margin_right = 117.0
margin_bottom = 48.0
text = "Enemies Defeated"

[node name="EnemyDefeatedCountValue" type="Label" parent="StatsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 317.0
margin_top = 34.0
margin_right = 325.0
margin_bottom = 48.0
text = "0"

[node name="DistanceTraveledLabel" type="Label" parent="StatsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 68.0
margin_right = 117.0
margin_bottom = 82.0
text = "Distance Traveled"

[node name="DistanceTraveledValue" type="Label" parent="StatsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 317.0
margin_top = 68.0
margin_right = 325.0
margin_bottom = 82.0
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="StatsMenu/Panel/MarginContainer/VBoxContainer"]
margin_top = 628.0
margin_right = 904.0
margin_bottom = 648.0

[node name="StatsBackButton" type="Button" parent="StatsMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 64.0
margin_bottom = 20.0
text = "<-- Back"

[node name="OptionsMenu" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="OptionsMenu"]
margin_left = 40.0
margin_top = 40.0
margin_right = 984.0
margin_bottom = 728.0

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 924.0
margin_bottom = 668.0
custom_constants/separation = 20

[node name="OptionsTitle" type="Label" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer"]
margin_right = 904.0
margin_bottom = 14.0
text = "Options"

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 904.0
margin_bottom = 608.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 200
custom_constants/margin_top = 200
custom_constants/margin_left = 200
custom_constants/margin_bottom = 200

[node name="GridContainer" type="GridContainer" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 200.0
margin_top = 200.0
margin_right = 704.0
margin_bottom = 374.0
custom_constants/vseparation = 20
custom_constants/hseparation = 200
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 1.0
margin_right = 136.0
margin_bottom = 15.0
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 336.0
margin_right = 504.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="VFXVolumeLabel" type="Label" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 37.0
margin_right = 136.0
margin_bottom = 51.0
text = "VFX Volume"

[node name="VFXVolumeSlider" type="HSlider" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 336.0
margin_top = 36.0
margin_right = 504.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="MusicVolumeLabel" type="Label" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 73.0
margin_right = 136.0
margin_bottom = 87.0
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 336.0
margin_top = 72.0
margin_right = 504.0
margin_bottom = 88.0
size_flags_horizontal = 3

[node name="ScreenShakeToggleLabel" type="Label" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 121.0
margin_right = 136.0
margin_bottom = 135.0
text = "Disable Screen Shake"

[node name="ScreenShakeToggleValue" type="CheckButton" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 336.0
margin_top = 108.0
margin_right = 504.0
margin_bottom = 148.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer"]
margin_top = 628.0
margin_right = 904.0
margin_bottom = 648.0

[node name="OptionsBackButton" type="Button" parent="OptionsMenu/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 64.0
margin_bottom = 20.0
text = "<-- Back"
